--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,15 +8,9 @@ jobs:
   build-and-push-to-gcr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: RafikFarhad/push-to-gcr-github-action@v4.1
-        with:
-          gcloud_service_key: ${{ secrets.GCLOUD_SERVICE_KEY }} # can be base64 encoded or plain text
-          registry: gcr.io
-          project_id: ${{ secrets.PROYECT_ID }}
-          image_name: backend
-          image_tag: test-${{ github.sha }}, ${{ github.sha }}
-          dockerfile: Dockerfile
-          context: ./docker
-
-
+      uses: mattes/gce-docker-push-action@v1
+      with:
+        creds: ${{ secrets.GCLOUD_SERVICE_KEY }}
+        src: org/local-image:build
+        image_tag: funnycheap-${{ github.sha }}, ${{ github.sha }}
+        dst: gcr.io/${{ secrets.PROYECT_ID }}/funnycheap:${{github.run_number}}-${{github.sha}}
