--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,8 @@ jobs:
   build-and-push-to-gcr:
     runs-on: ubuntu-latest
     steps:
-      uses: mattes/gce-docker-push-action@v1
-      with:
-        creds: ${{ secrets.GCLOUD_SERVICE_KEY }}
-        src: org/local-image:build
-        image_tag: funnycheap-${{ github.sha }}, ${{ github.sha }}
-        dst: gcr.io/${{ secrets.PROYECT_ID }}/funnycheap:${{github.run_number}}-${{github.sha}}
+      - uses: mattes/gce-docker-push-action@v1
+        with:
+          creds: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          src: org/local-image:build
+          dst: gcr.io/my-project/my-image:${{github.run_number}}-${{github.sha}}
