--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           creds: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           src: org/local-image:build
-          dst: gcr.io/${{ secrets.PROYECT_ID }}/funcheap:${{github.run_number}}-${{github.sha}}
+          dst: eu.gcr.io/${{ secrets.PROYECT_ID }}/funcheap:${{github.run_number}}-${{github.sha}}
