--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,24 @@
 name: Push to GCR GitHub Action
-
-on:
+on: 
   push:
-    branches: [ main ]
-
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   build-and-push-to-gcr:
+    name: "Bulding and pushing images"
     runs-on: ubuntu-latest
     steps:
-      - uses: mattes/gce-docker-push-action@v1
+      - uses: actions/checkout@v2
+      - name: "Building and pushing the image"
+        uses: ./
         with:
-          creds: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          src: org/local-image:build
-          dst: eu.gcr.io/${{ secrets.PROYECT_ID }}/funcheap:${{github.run_number}}-${{github.sha}}
+          gcloud_service_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          registry: gcr.io
+          project_id: ${{ secrets.PROYECT_ID }}
+          image_name: funcheap
+          image_tag: funcheap-${{ github.sha }}, ${{ github.sha }}
+          dockerfile: Dockerfile
+          target: build
